# bioapp_flask

./: .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  HBaseConnect.py  MysqlConnect.py  Pipfile  README.md  app.py  config.py  main.py  manage.py  pear-nginx.conf  pear-supervisor.conf  pear.sql  pyproject.toml  requirement.txt  requirements.txt  start.py  start.sh  test
applications/: __init__.py  config.py
applications/common/: admin.py  admin_log.py  curd.py  helper.py
applications/configs/: config.py
applications/extensions/: __init__.py  init_cache.py  init_error_views.py  init_jwt.py  init_limiter.py  init_template_directives.py  init_template_func.py
applications/models/: __init__.py  admin_dept.py  admin_role.py  admin_user.py
applications/rights/: __init__.py  department.py  rights.py  roles.py
applications/schemas/: __init__.py  admin_role.py
applications/system/: __init__.py  file.py  passport.py
applications/users/: profile.py  user.py
applications/view/: __init__.py  department.py  document_view.py  file.py  index.py  logs_view.py  rights.py  roles.py  system_view.py  (+1 more)
common/: model.py  view.py
docs/: 01项目搭建.md  02数据模型创建.md  03后端接口初始化.md  04登录与权限拦截.md  install.md
entrance/: __init__.py  bps.py  extensions.py  models.py  namespaces.py
extensions/: init_databases.py
models/: __init__.py  rights.py  users.py
pear_admin/: __init__.py  __version__.py  extensions.py  models.py
require/: extra.txt  min.txt
requirement/: dev.txt  devAll.txt  min.txt
templates/: index.html  login.html
tests/: test_pear_admin_flask.py
(+362 files in other folders)
