[tool.poetry]
name = "pear-admin-flask"
version = "0.1.0"
description = ""
authors = ["zhengxinonly <pyxxponly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-sqlalchemy = "^2.5.1"
flask-migrate = "^3.1.0"
flask-pydantic = "^0.10.0"
isort = "^5.10.1"
black = "^22.6.0"
pre-commit = "^2.20.0"
python-dotenv = "^0.20.0"
pymysql = "^1.0.2"
flask-jwt-extended = "^4.4.4"
captcha = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true